tests/ui/rust-2018/issue-54006.stderr
error[E0432]: unresolved import `alloc`
  --> $DIR/issue-54006.rs:6:5
   |
LL | use alloc::vec;
   |     ^^^^^
   |
help: a similar path exists
   |
LL | use core::alloc::vec;
   |     ~~~~~~~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
